crates/kjarni-ffi/include/kjarni.h


typedef enum KjarniErrorCode {
  KJARNI_ERROR_CODE_OK = 0,
  KJARNI_ERROR_CODE_NULL_POINTER = 1,
  KJARNI_ERROR_CODE_INVALID_UTF8 = 2,
  KJARNI_ERROR_CODE_MODEL_NOT_FOUND = 3,
  KJARNI_ERROR_CODE_LOAD_FAILED = 4,
  KJARNI_ERROR_CODE_INFERENCE_FAILED = 5,
  KJARNI_ERROR_CODE_GPU_UNAVAILABLE = 6,
  KJARNI_ERROR_CODE_INVALID_CONFIG = 7,
  KJARNI_ERROR_CODE_CANCELLED = 8,
  KJARNI_ERROR_CODE_TIMEOUT = 9,
  KJARNI_ERROR_CODE_STREAM_ENDED = 10,
  KJARNI_ERROR_CODE_UNKNOWN = 255,
} KjarniErrorCode;
typedef enum KjarniDevice {
  KJARNI_DEVICE_CPU = 0,
  KJARNI_DEVICE_GPU = 1,
} KjarniDevice;
typedef enum KjarniSearchMode {
  KJARNI_SEARCH_MODE_KEYWORD = 0,
  KJARNI_SEARCH_MODE_SEMANTIC = 1,
  KJARNI_SEARCH_MODE_HYBRID = 2,
} KjarniSearchMode;
typedef struct KjarniCancelToken KjarniCancelToken;
typedef struct KjarniClassifier KjarniClassifier;
typedef struct KjarniEmbedder KjarniEmbedder;
typedef struct KjarniIndexer KjarniIndexer;
typedef struct KjarniReranker KjarniReranker;
typedef struct KjarniSearcher KjarniSearcher;
typedef struct KjarniFloatArray {
  float *data;
  uintptr_t len;
} KjarniFloatArray;
typedef struct KjarniFloat2DArray {
  float *data;
  uintptr_t rows;
  uintptr_t cols;
} KjarniFloat2DArray;
typedef struct KjarniEmbedderConfig {
  enum KjarniDevice device;
  const char *cache_dir;
  const char *model_name;
  const char *model_path;
  int32_t normalize;
  int32_t quiet;
} KjarniEmbedderConfig;
typedef struct KjarniClassResult {
  char *label;
  float score;
} KjarniClassResult;
typedef struct KjarniClassResults {
  struct KjarniClassResult *results;
  uintptr_t len;
} KjarniClassResults;
typedef struct KjarniClassifierConfig {
  enum KjarniDevice device;
  const char *cache_dir;
  const char *model_name;
  const char *model_path;
  const char *const *labels;
  uintptr_t num_labels;
  int32_t multi_label;
  int32_t quiet;
} KjarniClassifierConfig;
typedef struct KjarniRerankResult {
  uintptr_t index;
  float score;
} KjarniRerankResult;
typedef struct KjarniRerankResults {
  struct KjarniRerankResult *results;
  uintptr_t len;
} KjarniRerankResults;
typedef struct KjarniRerankerConfig {
  enum KjarniDevice device;
  const char *cache_dir;
  const char *model_name;
  const char *model_path;
  int32_t quiet;
} KjarniRerankerConfig;
typedef struct KjarniIndexInfo {
  char *path;
  uintptr_t document_count;
  uintptr_t segment_count;
  uintptr_t dimension;
  uint64_t size_bytes;
  char *embedding_model;
} KjarniIndexInfo;
typedef struct KjarniIndexerConfig {
  enum KjarniDevice device;
  const char *cache_dir;
  const char *model_name;
  uintptr_t chunk_size;
  uintptr_t chunk_overlap;
  uintptr_t batch_size;
  const char *extensions;
  const char *exclude_patterns;
  int32_t recursive;
  int32_t include_hidden;
  uintptr_t max_file_size;
  int32_t quiet;
} KjarniIndexerConfig;
typedef struct KjarniIndexStats {
  uintptr_t documents_indexed;
  uintptr_t chunks_created;
  uintptr_t dimension;
  uint64_t size_bytes;
  uintptr_t files_processed;
  uintptr_t files_skipped;
  uint64_t elapsed_ms;
} KjarniIndexStats;
typedef void (*KjarniProgressCallbackFn)(struct KjarniProgress progress, void *user_data);
typedef struct KjarniSearchResult {
  float score;
  uintptr_t document_id;
  char *text;
  char *metadata_json;
} KjarniSearchResult;
typedef struct KjarniSearchResults {
  struct KjarniSearchResult *results;
  uintptr_t len;
} KjarniSearchResults;
typedef struct KjarniSearchOptions {
  int32_t mode;
  uintptr_t top_k;
  int32_t use_reranker;
  float threshold;
  const char *source_pattern;
  const char *filter_key;
  const char *filter_value;
} KjarniSearchOptions;
typedef struct KjarniSearcherConfig {
  enum KjarniDevice device;
  const char *cache_dir;
  const char *model_name;
  const char *rerank_model;
  enum KjarniSearchMode default_mode;
  uintptr_t default_top_k;
  int32_t quiet;
} KjarniSearcherConfig;
void kjarni_string_free(char *s);
float kjarni_cosine_similarity(const float *a, const float *b, uintptr_t len);
struct KjarniCancelToken *kjarni_cancel_token_new(void);
void kjarni_cancel_token_cancel(struct KjarniCancelToken *token);
bool kjarni_cancel_token_is_cancelled(const struct KjarniCancelToken *token);
void kjarni_cancel_token_reset(struct KjarniCancelToken *token);
void kjarni_cancel_token_free(struct KjarniCancelToken *token);
const char *kjarni_last_error_message(void);
struct KjarniEmbedderConfig kjarni_embedder_config_default(void);
enum KjarniErrorCode kjarni_embedder_new(const struct KjarniEmbedderConfig *config,
                                         struct KjarniEmbedder **out);
void kjarni_embedder_free(struct KjarniEmbedder *embedder);
enum KjarniErrorCode kjarni_embedder_encode(struct KjarniEmbedder *embedder,
                                            const char *text,
                                            struct KjarniFloatArray *out);
enum KjarniErrorCode kjarni_embedder_encode_batch(struct KjarniEmbedder *embedder,
                                                  const char *const *texts,
                                                  uintptr_t num_texts,
                                                  struct KjarniFloat2DArray *out);
enum KjarniErrorCode kjarni_embedder_similarity(struct KjarniEmbedder *embedder,
                                                const char *text1,
                                                const char *text2,
                                                float *out);
uintptr_t kjarni_embedder_dim(const struct KjarniEmbedder *embedder);
void kjarni_class_results_free(struct KjarniClassResults results);
struct KjarniClassifierConfig kjarni_classifier_config_default(void);
enum KjarniErrorCode kjarni_classifier_new(const struct KjarniClassifierConfig *config,
                                           struct KjarniClassifier **out);
void kjarni_classifier_free(struct KjarniClassifier *classifier);
enum KjarniErrorCode kjarni_classifier_classify(struct KjarniClassifier *classifier,
                                                const char *text,
                                                struct KjarniClassResults *out);
uintptr_t kjarni_classifier_num_labels(const struct KjarniClassifier *classifier);
void kjarni_rerank_results_free(struct KjarniRerankResults results);
struct KjarniRerankerConfig kjarni_reranker_config_default(void);
enum KjarniErrorCode kjarni_reranker_new(const struct KjarniRerankerConfig *config,
                                         struct KjarniReranker **out);
void kjarni_reranker_free(struct KjarniReranker *reranker);
enum KjarniErrorCode kjarni_reranker_score(struct KjarniReranker *reranker,
                                           const char *query,
                                           const char *document,
                                           float *out);
enum KjarniErrorCode kjarni_reranker_rerank(struct KjarniReranker *reranker,
                                            const char *query,
                                            const char *const *documents,
                                            uintptr_t num_docs,
                                            struct KjarniRerankResults *out);
enum KjarniErrorCode kjarni_reranker_rerank_top_k(struct KjarniReranker *reranker,
                                                  const char *query,
                                                  const char *const *documents,
                                                  uintptr_t num_docs,
                                                  uintptr_t top_k,
                                                  struct KjarniRerankResults *out);
void kjarni_index_info_free(struct KjarniIndexInfo info);
struct KjarniIndexerConfig kjarni_indexer_config_default(void);
enum KjarniErrorCode kjarni_indexer_new(const struct KjarniIndexerConfig *config,
                                        struct KjarniIndexer **out);
void kjarni_indexer_free(struct KjarniIndexer *indexer);
enum KjarniErrorCode kjarni_indexer_create(struct KjarniIndexer *indexer,
                                           const char *index_path,
                                           const char *const *inputs,
                                           uintptr_t num_inputs,
                                           int32_t force,
                                           struct KjarniIndexStats *out);
enum KjarniErrorCode kjarni_indexer_create_with_callback(struct KjarniIndexer *indexer,
                                                         const char *index_path,
                                                         const char *const *inputs,
                                                         uintptr_t num_inputs,
                                                         int32_t force,
                                                         KjarniProgressCallbackFn progress_callback,
                                                         void *user_data,
                                                         const struct KjarniCancelToken *cancel_token,
                                                         struct KjarniIndexStats *out);
enum KjarniErrorCode kjarni_indexer_add(struct KjarniIndexer *indexer,
                                        const char *index_path,
                                        const char *const *inputs,
                                        uintptr_t num_inputs,
                                        uintptr_t *documents_added);
enum KjarniErrorCode kjarni_indexer_add_with_callback(struct KjarniIndexer *indexer,
                                                      const char *index_path,
                                                      const char *const *inputs,
                                                      uintptr_t num_inputs,
                                                      KjarniProgressCallbackFn progress_callback,
                                                      void *user_data,
                                                      const struct KjarniCancelToken *cancel_token,
                                                      uintptr_t *documents_added);
enum KjarniErrorCode kjarni_index_info(const char *index_path, struct KjarniIndexInfo *out);
enum KjarniErrorCode kjarni_index_delete(const char *index_path);
uintptr_t kjarni_indexer_model_name(const struct KjarniIndexer *indexer,
                                    char *buf,
                                    uintptr_t buf_len);
uintptr_t kjarni_indexer_dimension(const struct KjarniIndexer *indexer);
uintptr_t kjarni_indexer_chunk_size(const struct KjarniIndexer *indexer);
void kjarni_search_results_free(struct KjarniSearchResults results);
struct KjarniSearchOptions kjarni_search_options_default(void);
struct KjarniSearcherConfig kjarni_searcher_config_default(void);
enum KjarniErrorCode kjarni_searcher_new(const struct KjarniSearcherConfig *config,
                                         struct KjarniSearcher **out);
void kjarni_searcher_free(struct KjarniSearcher *searcher);
enum KjarniErrorCode kjarni_searcher_search(struct KjarniSearcher *searcher,
                                            const char *index_path,
                                            const char *query,
                                            struct KjarniSearchResults *out);
enum KjarniErrorCode kjarni_searcher_search_with_options(struct KjarniSearcher *searcher,
                                                         const char *index_path,
                                                         const char *query,
                                                         const struct KjarniSearchOptions *options,
                                                         struct KjarniSearchResults *out);
enum KjarniErrorCode kjarni_search_keywords(const char *index_path,
                                            const char *query,
                                            uintptr_t top_k,
                                            struct KjarniSearchResults *out);
bool kjarni_searcher_has_reranker(const struct KjarniSearcher *searcher);
enum KjarniSearchMode kjarni_searcher_default_mode(const struct KjarniSearcher *searcher);
uintptr_t kjarni_searcher_default_top_k(const struct KjarniSearcher *searcher);
uintptr_t kjarni_searcher_model_name(const struct KjarniSearcher *searcher,
                                     char *buf,
                                     uintptr_t buf_len);
uintptr_t kjarni_searcher_reranker_model(const struct KjarniSearcher *searcher,
                                         char *buf,
                                         uintptr_t buf_len);