crates/kjarni-ffi/bindings/csharp/Kjarni/Native.cs


        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_string_free(IntPtr s);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_class_results_free(KjarniClassResults results);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_rerank_results_free(KjarniRerankResults results);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_search_results_free(KjarniSearchResults results);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_index_info_free(KjarniIndexInfo info);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr kjarni_cancel_token_new();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_cancel_token_cancel(IntPtr token);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool kjarni_cancel_token_is_cancelled(IntPtr token);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_cancel_token_reset(IntPtr token);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_cancel_token_free(IntPtr token);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniEmbedderConfig kjarni_embedder_config_default();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_embedder_new(
            ref KjarniEmbedderConfig config,
            out IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_embedder_free(IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_embedder_encode(
            IntPtr handle,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
            out KjarniFloatArray result);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_embedder_encode_batch(
            IntPtr handle,
            IntPtr[] texts,
            UIntPtr numTexts,
            out KjarniFloat2DArray result);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_embedder_similarity(
            IntPtr handle,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string text1,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string text2,
            out float result);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr kjarni_embedder_dim(IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniClassifierConfig kjarni_classifier_config_default();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_classifier_new(
            ref KjarniClassifierConfig config,
            out IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_classifier_free(IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_classifier_classify(
            IntPtr handle,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
            out KjarniClassResults result);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr kjarni_classifier_num_labels(IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniRerankerConfig kjarni_reranker_config_default();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_reranker_new(
            ref KjarniRerankerConfig config,
            out IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_reranker_free(IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_reranker_score(
            IntPtr handle,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string query,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string document,
            out float result);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_reranker_rerank(
            IntPtr handle,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string query,
            IntPtr[] documents,
            UIntPtr numDocs,
            out KjarniRerankResults result);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_reranker_rerank_top_k(
            IntPtr handle,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string query,
            IntPtr[] documents,
            UIntPtr numDocs,
            UIntPtr topK,
            out KjarniRerankResults result);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniIndexerConfig kjarni_indexer_config_default();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_indexer_new(
            ref KjarniIndexerConfig config,
            out IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_indexer_free(IntPtr handle);

[DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
public static extern KjarniErrorCode kjarni_indexer_create(
    IntPtr handle,
    [MarshalAs(UnmanagedType.LPUTF8Str)] string indexPath,
    IntPtr[] inputs,
    UIntPtr numInputs,
    int force,
    out KjarniIndexStats stats);

[DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
public static extern KjarniErrorCode kjarni_indexer_create_with_callback(
    IntPtr handle,
    [MarshalAs(UnmanagedType.LPUTF8Str)] string indexPath,
    IntPtr[] inputs,
    UIntPtr numInputs,
    int force,
    KjarniProgressCallback? progressCallback,
    IntPtr userData,
    IntPtr cancelToken,
    out KjarniIndexStats stats);

[DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
public static extern KjarniErrorCode kjarni_indexer_add(
    IntPtr handle,
    [MarshalAs(UnmanagedType.LPUTF8Str)] string indexPath,
    IntPtr[] inputs,
    UIntPtr numInputs,
    out UIntPtr documentsAdded);

[DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
public static extern KjarniErrorCode kjarni_indexer_add_with_callback(
    IntPtr handle,
    [MarshalAs(UnmanagedType.LPUTF8Str)] string indexPath,
    IntPtr[] inputs,
    UIntPtr numInputs,
    KjarniProgressCallback? progressCallback,
    IntPtr userData,
    IntPtr cancelToken,
    out UIntPtr documentsAdded);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_index_info(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string indexPath,
            out KjarniIndexInfo info);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_index_delete(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string indexPath);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr kjarni_indexer_model_name(IntPtr handle, IntPtr buf, UIntPtr buf_len);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr kjarni_indexer_dimension(IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr kjarni_indexer_chunk_size(IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniSearcherConfig kjarni_searcher_config_default();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniSearchOptions kjarni_search_options_default();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_searcher_new(
            ref KjarniSearcherConfig config,
            out IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_searcher_free(IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_searcher_search(
            IntPtr handle,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string indexPath,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string query,
            out KjarniSearchResults results);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_searcher_search_with_options(
            IntPtr handle,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string indexPath,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string query,
            ref KjarniSearchOptions options,
            out KjarniSearchResults results);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_search_keywords(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string indexPath,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string query,
            UIntPtr topK,
            out KjarniSearchResults results);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool kjarni_searcher_has_reranker(IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniSearchMode kjarni_searcher_default_mode(IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr kjarni_searcher_default_top_k(IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr kjarni_searcher_model_name(IntPtr handle, IntPtr buf, UIntPtr buf_len);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr kjarni_searcher_reranker_model(IntPtr handle, IntPtr buf, UIntPtr buf_len);

        [DllImport(LibName)]
        public static extern float kjarni_cosine_similarity(float[] a, float[] b, nuint len);

        public static void CheckError(KjarniErrorCode err)
        {
            if (err != KjarniErrorCode.Ok)
            {
                var msgPtr = kjarni_last_error_message();
                var msg = msgPtr != IntPtr.Zero
                    ? Marshal.PtrToStringUTF8(msgPtr)
                    : $"Error: {err}";
                throw new KjarniException(msg ?? "Unknown error", err);
            }
        }
